# mallard

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  skills-lock.json
.agents/skills/spec-driven-docs/: SKILL.md
.cargo/: config.toml
.claude/skills/mallard/: SKILL.md
.claude/skills/pr-review/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/review/: action.yml
.github/workflows/: ci.yml  release.yml
assets/: rules-default.yml
docs/: cli-json-contract.md  system.md
docs/decisions/: 0001-rust-as-implementation-language.md  0002-duckdb-as-graph-and-index-store.md  0003-tree-sitter-and-ast-grep-parsing.md  0004-symbolic-graph-retrieval-over-embeddings-first.md  0005-ephemeral-indexing-defer-incremental.md  0006-pr-review-as-initial-wedge.md  0007-defer-retrieval-module-agents-compose-primitives.md  0008-heuristic-name-resolution.md  0009-pr-review-architecture-pattern.md  0010-edge-confidence-tier.md  0011-deterministic-only-pr-review-v1.md  0012-multi-language-extractor-architecture.md  0013-kill-phase-d-pivot-agent-verification.md
docs/plans/: move-1-python-ts-action.md  workflow-fit-and-contract.md
docs/research/: agent-pr-quality-methodology.md  agentic-code-review-tools.md  finding-7-single-line-guard-detection.md  market-analysis-2026-05.md  wedge-dogfood-1.md
skills/mallard/: SKILL.md
src/: core.rs  extractor.rs  extractor_common.rs  extractor_python.rs  extractor_typescript.rs  file_processor.rs  index.rs  lib.rs  main.rs  parse_errors.rs  parsed_source.rs  parser.rs  pr_review.rs  query.rs  rules.rs  schema.rs  store.rs  walk.rs
tests/: index_build_integration.rs  index_query_integration.rs  pr_review_integration.rs
tests/fixtures/: rules.yml
(+27 files in other folders)
