[package]
name = "mallard"
version = "0.1.0"
edition = "2024"

[lib]
name = "mallard"
path = "src/lib.rs"

[[bin]]
name = "mallard"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
ast-grep-core = "0.42"
ast-grep-language = "0.42"
duckdb = "=1.10502.0"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
blake3 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = "3"
