[package]
name = "mallard"
version = "0.1.0"
edition = "2024"
description = "Deterministic, citation-grounded structural code-index for verifying AI-generated code changes. Per-SHA DuckDB graph. No LLM."
license = "MIT"
repository = "https://github.com/richard-gyiko/mallard"
homepage = "https://github.com/richard-gyiko/mallard"
readme = "README.md"
keywords = ["code-intelligence", "static-analysis", "agent", "code-review", "ai"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "mallard"
path = "src/lib.rs"

[[bin]]
name = "mallard"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
ast-grep-core = "0.42"
ast-grep-language = "0.42"
duckdb = { version = "=1.10503.1", features = ["bundled"] }
walkdir = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
blake3 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = "3"
